# regular-expression

./: .agent.md  .gitignore  AGENTS.md  Cargo.toml  LICENCE.txt  README.md  README_ja.md
.agents/skills/code-review/: SKILL.md
.codex/: config.toml
.github/instructions/review/: pr-review.instructions.md
.github/workflow/: rust.yml
.github/workflows/: rust.yml
crates/regex-cli/: Cargo.toml
crates/regex-cli/src/: error.rs  main.rs
crates/regex-cli/src/tests/: compile_patterns_tests.rs  execute_matching_tests.rs
crates/regex-cli/tests/: integration_tests.rs
crates/regex-core/: Cargo.toml
crates/regex-core/benches/: regex_engine_bench.rs
crates/regex-core/src/: engine.rs  error.rs  lib.rs
crates/regex-core/src/engine/: ast.rs  compiler.rs  compiler_v2.rs  evaluator.rs  evaluator_v2.rs  instruction.rs  instruction_v2.rs  parser.rs  parser_v2.rs  search_plan.rs
docs/plans/: compiler-plan.md  evaluator-plan.md  optimize-plan.md  parser-plan.md  v2_plan.md
docs/skill-output/: PLAN.md
src/: cli.rs  engine.rs  error.rs  fileread.rs  helper.rs  lib.rs  main.rs  parser.rs
src/engine/: codegen.rs  compiler.rs  evaluator.rs  helper.rs  instruction.rs  parser.rs
tests/: integration_tests.rs
