[package]
name = "regular-expression"
version = "1.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "regex"
path = "src/bin/regex.rs"
